# jasmine_agistoy

./: .codeclimate.yml  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/actions/get_dependencies/: action.yml
.github/actions/unittest/: action.yml
.github/actions/validation/: action.yml
.github/workflows/: build.yml  unittest.yml  validation.yml
agistoy/: __init__.py
agistoy/model/: __init__.py  estimate.py  exposure.py  gradient.py  longitude.py  update_calibration.py  update_exposure.py  update_source.py
notebook/: JARBIS_functions_tests.ipynb  demonstration.ipynb  demonstration2D_positions_only.ipynb  demonstration2D_positions_pm_plx.ipynb  demonstration_reference.ipynb  jasmine_frame.py  propagation.py
tests/: requirements.txt
tests/unittest/erfa/: test_aberration.py  test_deflection.py  test_parallax.py  test_propermotion.py  test_transform.py
tests/unittest/erfa_tools/: test_aberration.py  test_deflection.py  test_parallax.py  test_propermotion.py  test_transform.py
tests/unittest/model/: test_epoch_position.py  test_estimate.py  test_exposure.py  test_gradient.py  test_longitude.py  test_position_focal_plane.py  test_position_ideal_plane.py  test_update.py
tests/unittest/model_1d/: test_epoch_position.py  test_estimate.py  test_exposure.py  test_gradient.py  test_longitude.py  test_mock.py  test_position_focal_plane.py  test_position_ideal_plane.py  test_update.py
tests/unittest/model_2d/: test_generateobs.py  test_iterativesolver.py  test_propagation.py
tests/validation/model_1d/: test_integrate.py  test_update.py
toybis/: __init__.py
toybis/erfa/: __init__.py  aberration.py  constants.py  deflection.py  parallax.py  propermotion.py  transform.py
toybis/erfa_tools/: aberration.py  deflection.py  parallax.py
toybis/erfafuncs/: aberration.py  constants.py  deflection.py  transform.py
toybis/model/: epoch_position.py  update_exposure.py  update_source.py
toybis/model_1d/: __init__.py  estimate.py  exposure.py  gradient.py  mock.py  position_focal_plane.py  position_ideal_plane.py  update_calibration.py  update_exposure.py  update_source.py
toybis/model_2d/: generateobs.py  iterativesolver.py  propagation.py  run_jarbis.py  utils.py
