[build-system]
requires = ['setuptools>=75.0', 'wheel>=0.44']
build-backend = 'setuptools.build_meta'

[project]
name = 'jasmine_toybis'
description = 'An experimental code to optimize astrometric parameters'
requires-python = '>3.9'
license = {file = 'LICENSE'}
authors = [
  {name = 'Ryou Ohsawa', email = 'ryou.ohsawa@nao.ac.jp'},
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering :: Astronomy',
]

dynamic = ['version', 'readme']

dependencies = [
  'numpy>=2.1',
  'h5py>=3.11',
  'scipy>=1.14',
  'pandas>=2.2',
  'astropy>=6.0',
  'astroquery>=0.4',
  'matplotlib>=3.9',
  'jax>=0.4.33',
  'jaxlib>=0.4.33'
]

[project.urls]
homepage = 'https://github.com/JASMINE-Mission/jasmine_toybis'
repository = 'https://github.com/JASMINE-Mission/jasmine_toybis'

[tool.setuptools.packages.find]
include = ['toybis*']

[tool.setuptools.dynamic]
version = { attr = 'toybis.__version__' }
readme = { file = 'README.md', content-type = 'text/markdown' }
